--- a/index.css
+++ b/index.css
@@ -239,3 +239,84 @@ a:hover {
 .contact-info i {
     margin-right: 10px;
 }
+
+
+
+
+
+
+/* Медиазапрос для экранов шириной до 768px (мобильные устройства) */
+@media (max-width: 768px) {
+
+    /* Панель навигации */
+    .navbar {
+        flex-direction: column; /* Ставим элементы вертикально */
+        padding: 10px;
+        width: 100%;
+    }
+
+    .navbar a {
+        font-size: 18px; /* Уменьшаем размер шрифта для ссылок */
+    }
+
+    .navbar-item {
+        margin-left: 0; /* Убираем отступы слева */
+        padding: 10px 0; /* Увеличиваем отступы сверху и снизу */
+        padding: 0 10px;
+
+    }
+
+    /* Название сайта */
+    .navbar-brand {
+        font-size: 20px; /* Уменьшаем размер текста */
+    }
+
+    /* Размеры стрелки вниз */
+    .down-arrow {
+        font-size: 30px; /* Уменьшаем размер стрелки */
+    }
+
+    /* Социальные иконки */
+    .social-icons a {
+        font-size: 16px; /* Уменьшаем размер иконок */
+        padding: 0 10px; /* Уменьшаем отступы */
+    }
+
+    /* Контейнер с изображениями */
+    .container {
+        height: 80vh; /* Немного уменьшаем высоту */
+    }
+
+    .background-image, .second-image, .third-image {
+        height: 80vh; /* Меняем высоту изображений для лучшего отображения */
+    }
+
+    /* Заголовок и подзаголовок */
+    .main-title {
+        font-size: 30px; /* Уменьшаем заголовок */
+    }
+
+    .subtext {
+        font-size: 16px; /* Уменьшаем текст подзаголовка */
+    }
+
+    /* Кнопки */
+    .fancy-button {
+        padding: 10px 20px; /* Уменьшаем отступы у кнопок */
+        font-size: 14px; /* Уменьшаем размер текста кнопки */
+    }
+
+    /* Контактный раздел */
+    .contact-section {
+        padding: 10px; /* Уменьшаем внутренние отступы */
+        text-align: center; /* Выравниваем текст по центру */
+    }
+
+    .contact-section h2 {
+        font-size: 20px; /* Уменьшаем размер заголовка */
+    }
+
+    .contact-section p {
+        font-size: 14px; /* Уменьшаем размер текста */
+    }
+}
